--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "gitpython>=3.1.44",
     "langchain-anthropic>=0.3.16",
     "langchain-chroma>=0.2.4",
+    "langchain-cohere>=0.4.4",
     "langchain-community>=0.3.26",
     "langchain-core>=0.3.66",
     "langchain-openai>=0.3.25",
@@ -15,6 +16,7 @@ dependencies = [
     "langchain-text-splitters>=0.3.8",
     "pip>=25.1.1",
     "python-dotenv>=1.1.1",
+    "rank-bm25>=0.2.2",
     "sentence-transformers>=4.1.0",
     "tavily-python>=0.7.9",
 ]
