--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,9 +14,15 @@ dependencies = [
     "langchain-openai>=0.3.25",
     "langchain-tavily>=0.2.5",
     "langchain-text-splitters>=0.3.8",
+    "langgraph>=0.5.1",
+    "langgraph-checkpoint>=2.1.0",
+    "nest-asyncio>=1.6.0",
     "pip>=25.1.1",
+    "pygraphviz",
     "python-dotenv>=1.1.1",
+    "ragas>=0.2.15",
     "rank-bm25>=0.2.2",
+    "rapidfuzz>=3.13.0",
     "sentence-transformers>=4.1.0",
     "tavily-python>=0.7.9",
 ]
